# noisycoconut

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOISE_TYPES_GUIDE.md  README.md  coconut.py  data.py  focused_aggregation_test.py  focused_noiose_types_test.py  focused_paths_test.py  focused_step_test.py  full_test.py  pyproject.toml  quick_branch_test.py  quick_test.py  requirements.txt  run.py  run_branch_experiment.sh  run_logits.py  run_noisy_experiment.py  test.py  test_custom.py
args/: noisy-coconut.yaml
data/gsm8k/: test.json
data/mmlu/: dev.json  validation.json
evaluate/: analyze_dk.py  analyze_self_consistency.py  evaluate.ipynb  self-consistency.py
graphs/: plot_accuracy_degradation.py
logs/: branch_5050075.err  branch_5119619.err  branch_5119619.out  branch_5483826.err  branch_5483826.out  branch_5484589.err  branch_5484589.out  branch_5484600.err  branch_5484600.out  test_4980630.err
noisycoconut/: __init__.py  coconut.py
plots/: plot_accuracy_degradation.py
results/noise_results/: results_llama_gaussian_scaled_better.json
results/noise_scale/: results_llama_combined.json  results_llama_gaussian_scaled_1.json  results_llama_gaussian_scaled_both.json  results_llama_gaussian_scaled_good.json
results/noisy_cconut/gsm8k/: noisy_coconut_gsm8k__scratch_mj6ux_.cache_hf_models_gpt-oss-20b_20251201_121922.json
scripts/: noisy_coconut_gsm8k__scratch_mj6ux_.cache_hf_models_gpt-oss-20b_20251121_143224.json  run_branch_experiment.sh  run_experiment.sh  run_simple_experiment.sh
tests/: tests.py
